debugger options for transparent and states

--- a/theme/views/base.twig
+++ b/theme/views/base.twig
@@ -1,25 +1,31 @@
 <!doctype html>
 <html {{ site.language_attributes }}>
-<head>
-    <meta charset="{{ site.charset }}" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="pingback" href="{{ site.pingback_url }}" />
-    <style>
-        [x-cloak] { display: none; }
-    </style>
-    {{function('wp_head')}}
-</head>
+	<head>
+		<meta charset="{{ site.charset }}"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="pingback" href="{{ site.pingback_url }}"/>
+		<style>
+			[x-cloak] {
+				display: none;
+			}
+		</style>
+		{{function('wp_head')}}
+	</head>
 
-<body class="{{body_class}}" data-template="base.twig">
-    {% include 'header.twig' %}
+	<body class="{{body_class}}" data-template="base.twig">
+		{% include 'header.twig' %}
 
-    {% block content %}
-    Sorry, no content
-    {% endblock %}
+		{% block content %}
+			Sorry, no content
 
-    {% block footer %}
-        {% include 'footer.twig' %}
-        {{ function('wp_footer') }}
-    {% endblock %}
-</body>
+
+		{% endblock %}
+
+		{% block footer %}
+			{{ include('@helper/debug.html') }}
+
+			{% include 'footer.twig' %}
+			{{ function('wp_footer') }}
+		{% endblock %}
+	</body>
 </html>
