--- a/theme/views/component-preview.twig
+++ b/theme/views/component-preview.twig
@@ -15,7 +15,7 @@
 	{% set state = params %}
 
 	{% if params.debug %}
-		{{ include('@helper/debug.twig') }}
+		{{ include('@helper/debug.html') }}
 	{% endif %}
 
 	<style>
