--- a/theme/layouts/components/index.twig
+++ b/theme/layouts/components/index.twig
@@ -1,11 +1,11 @@
-{% set state = post.meta('components') %}
+{% set state = components %}
 
 {% if post.meta('debug') %}
-	{{ include('@helper/debug.twig') }}
+	{{ include('@helper/debug.html') }}
 {% endif %}
 
 
-{% for layout in state %}
+{% for layout in components %}
 
 	{{ include('@component/components/' ~ layout.acf_fc_layout ~ '/index.twig') }}
 
