--- a/theme/assets/styles/editor-style.css
+++ b/theme/assets/styles/editor-style.css
@@ -8,7 +8,7 @@ body {
   @apply font-sans;
 }
 
-.wp-block{
+.wp-block {
   @apply max-w-screen-xl;
 }
 
@@ -16,7 +16,9 @@ body {
   @apply max-w-screen-xl mx-auto my-6;
 }
 
-.mce-content-body, .acf_content, .mceContentBody {
+.mce-content-body,
+.acf_content,
+.mceContentBody {
   @apply prose prose-lg max-w-none;
 }
 
