--- a/theme/layouts/components/pricing-table/index.twig
+++ b/theme/layouts/components/pricing-table/index.twig
@@ -1,4 +1,4 @@
-<section class="bg-blue-300">
+<section id="pricing" class="bg-blue-300">
 	<div class="flex items-center justify-center max-w-5xl px-8 py-12 mx-auto fles-col">
 		<div class="grid grid-cols-1 gap-2 lg:grid-cols-2">
 			<div class="flex flex-col p-8 bg-white border shadow-xl rounded-4xl shadow-gray-500/10 lg:p-12">
