--- a/theme/views/page.twig
+++ b/theme/views/page.twig
@@ -1,5 +1,5 @@
-{% extends "base.twig" %}
+{% extends 'base.twig' %}
 
 {% block content %}
-    {{ post.content }}
+	{{ include('@component/components/index.twig' )}}
 {% endblock %}
