--- a/theme/layouts/components/hero-1/index.twig
+++ b/theme/layouts/components/hero-1/index.twig
@@ -1,4 +1,4 @@
-<section class="bg-white">
+<section class="bg-white" x-data="{count: $persist(0)}">
 	<div class="items-center w-full px-5 py-24 mx-auto md:px-12 lg:px-16 max-w-7xl">
 		<div class="max-w-xl p-10 mx-auto text-center">
 			<div>
@@ -10,12 +10,14 @@
 																														                trouble, you wouldn't sit for a month
 				</p>
 			</div>
-			<div class="flex flex-col items-center justify-center gap-3 mt-10 lg:flex-row">
-				<a href="#_" class="items-center justify-center w-full px-6 py-2.5 text-center text-white duration-200 bg-black border-2 border-black rounded-full inline-flex hover:bg-transparent hover:border-black hover:text-black focus:outline-none lg:w-auto focus-visible:outline-black text-sm focus-visible:ring-black">
-					Button
+			<div 
+			
+			class="flex flex-col items-center justify-center gap-3 mt-10 lg:flex-row">
+				<a href="#_" class="cursor-pointer items-center justify-center w-full px-6 py-2.5 text-center text-white duration-200 bg-black border-2 border-black rounded-full inline-flex hover:bg-transparent hover:border-black hover:text-black focus:outline-none lg:w-auto focus-visible:outline-black text-sm focus-visible:ring-black" x-on:click="count++">
+					<span class="px-2">Persist Count =</span> <span x-text="count"></span>
 				</a>
-				<a href="#_" class="inline-flex items-center justify-center text-sm font-semibold text-black duration-200 hover:text-blue-500 focus:outline-none focus-visible:outline-gray-600">
-					Learn more &nbsp; →
+				<a hx-get="/?component=pricing-table" hx-select="#pricing" hx-target="#pricing" class="inline-flex items-center justify-center text-sm font-semibold text-black duration-200 cursor-pointer hover:text-blue-500 focus:outline-none focus-visible:outline-gray-600">
+					Fragment Swap &nbsp; →
 				</a>
 			</div>
 		</div>
@@ -25,3 +27,5 @@
 		<img class="w-full bg-gray-300" src="../images/placeholders/rectangle1.svg" alt="">
 	</div>
 </section>
+
+<div id="pricing"></div>
