CLI update and file structure

--- a/theme/layouts/dynamic-render.twig
+++ b/theme/layouts/dynamic-render.twig
@@ -1,4 +1,4 @@
-{% set path = '@component/' ~ group ~ '/' ~ name ~ '/index.twig' %}
+{% set path = '@component/' ~ group ~ '/' ~ name ~ '/index.html' %}
 {% set preview_size = params.breakpoint %}
 
 
