--- a/theme/views/archive.twig
+++ b/theme/views/archive.twig
@@ -1,9 +1,5 @@
-{# This file demonstrates using most of the index.twig template and modifying
-    just a small part. See `search.twig` for an example of another approach #}
-
-{% extends "index.twig" %}
+{% extends 'base.twig' %}
 
 {% block content %}
-    <h3>This is my archive</h3>
-    {{ parent() }}
+	{{ include('@component/components/index.twig' )}}
 {% endblock %}
