--- a/theme/views/component-preview.twig
+++ b/theme/views/component-preview.twig
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-	{{ include('@component/' ~ path ~ '/' ~ component ~ '/index.twig') }}
+	{{ include('@component/' ~ path ~ '/' ~ component ~ '/index.html') }}
 
 	{% set state = params %}
 
